issues fixed (#173)
* schema updated with 'take_notes' and prettier config added

* chore: cutoff_time_for_non_high_priority_activities & priority fields added

* chore: priority type updated and category field added

* refactor: downgraded action/checkout to v2

* chore: restored checkout default reference

* chore: checkout info added

* checkout action removed

* restore action checkout and readme.md added

* ref value added in yml file

* issue #145 resolved and yml file updated

* modifiy repo path in yml file

* modifiy custom action path in yml file & readme updated

* refactor custom action path in yml file

* refactor readme file with custom action path

* refactor runs-on and custome action name

* refactor: yml files modified

* action path updated

* update.ini removed

* needstranslation marker added and readme.md updated

* yml runtime enviroment updated

* comma removed and rebuild index.js

* event trigger types added

* issue #77 resolved

* Revert "issue #77 resolved"

This reverts commit ece9c9f9f67edb2e8215336cc243de5e66996f22.

* feat: issue 84 & 85 resolved

* refactor: comments on issue 84

* chore: update style.css & script.js with github assets

* chore: pointer to privacy note added

* fix: issue 38

* chore: https prefix added to old_url

* refactor(script.js): https prefix added to an old_url query

* chore: template strings removed

* refactor: conditional prefixing of current_url

* block urls image path updated

* issue 120 resolved

* fix: assets resource pointer/link

* fix: issue 113

* refactor: always-block url image

* refactor a way to show url blocked reason

* fix: time calculation difference included seconds

* fix: issue 581 & minor css changes

* chore: overflow fixed & uunecessary script removed

--- a/focus-blocked/style.css
+++ b/focus-blocked/style.css
@@ -1,23 +1,22 @@
 * {
   box-sizing: border-box;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 0;
   padding: 0;
 }
 
 .container {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 25px;
-  font-family: fenwick,sans-serif;
+  font-family: fenwick, sans-serif;
   position: relative;
 }
 
-.container>p {
+.container > p {
   font-size: 20px;
   font-weight: 600;
 }
@@ -29,14 +28,14 @@
   gap: 10px;
 }
 
-.notice-wrapper>h6 {
+.notice-wrapper > h6 {
   font-size: 14px;
   width: 70%;
   margin: 0;
   text-align: justify;
 }
 
-.notice-wrapper>a {
+.notice-wrapper > a {
   font-weight: bold;
 }
 
@@ -84,7 +83,7 @@
 #privacyContainer {
   width: 100%;
   position: absolute;
-  bottom: 5%;
+  bottom: 4%;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -117,7 +116,7 @@
 #privacyContainer button {
   width: fit-content;
   padding: 6px 20px;
-  font-family: fenwick,sans-serif;
+  font-family: fenwick, sans-serif;
   border-radius: 5px;
   border: 0;
   cursor: pointer;
@@ -141,9 +140,9 @@
   border: 0;
   cursor: pointer;
   background-color: lightblue;
-  position: absolute;
-  top: 1.5%;
-  right: 1%;
+  position: fixed;
+  top: 10px;
+  right: 8px;
   font-size: 14px;
   font-weight: 600;
   text-decoration: none;
@@ -156,10 +155,9 @@
 
 .overlay {
   position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  inset: 0;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.3);
   transition: opacity 500ms;
   visibility: hidden;
@@ -196,7 +194,7 @@
   overflow: auto;
 }
 
-.popup .content>a,
+.popup .content > a,
 button {
   width: fit-content;
   padding: 6px 10px;
